--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
-  text-align: center;
+  text-align: left;
+
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App__upper {
+  height: 66%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App__bottom {
+  height: 33%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App__row {
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+}
+
+.App__row > * {
+  flex: 1;
+}
+
+.App__column {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App__column > * {
+  flex: 1;
 }
