--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -4,6 +4,9 @@
   border: 2px solid rgba(0, 0, 0, 0.8);
 
   padding: 10px 20px;
+
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .Section__header {
@@ -15,8 +18,16 @@
 
 .Section__title {
   font-size: 18px;
+  line-height: 24px;
   padding: 0;
   margin: 0;
+}
+
+.Section__icon {
+  width: 24px;
+  height: 24px;
+
+  flex: 0;
 }
 
 .Section__content {
