--- a/src/components/Section.css
+++ b/src/components/Section.css
@@ -14,6 +14,7 @@
 
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .Section__title {
@@ -24,8 +25,8 @@
 }
 
 .Section__icon {
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
 
   flex: 0;
 }
