--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -7,6 +7,8 @@
   padding: 8px;
 
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   border: 1px solid transparent;
   
@@ -27,28 +29,38 @@
   border-color: transparent;
 }
 
+.Post__buttons {
+  display: none;
+}
+
+.Post:hover .Post__buttons {
+  display: inline;
+}
+
 .Post__button {
   box-sizing: border-box;
   
-  background-color: #fafafa;
-  border: 1px solid #eaeaea;
-  border-radius: 8px;
-  
-  padding: 0;
-  margin: 0 2px;
-  
-  width: 24px;
-  height: 24px;
+  background-color: transparent;
+  color: #666;
+  border: 1px solid transparent;
   
   cursor: pointer;
 }
 
 .Post__button:hover {
-  background-color: #fff;
-  border-color: #f0f0f0;
+  background-color: #fafafa;
+  border-color: #e3e3e3;
+  color: #000;
+}
 
-  transform: translateY(-2px);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+.Post__button--info:hover {
+  background-color: #0000e3;
+  color: #fff;
+}
+
+.Post__button--danger:hover {
+  background-color: #e30000;
+  color: #fff;
 }
 
 .Post__content {
